<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="title_home">Welcome to the SpaceCoffee</string>
    <string name="background_description">barComptoir</string>
    <string name="entree">Entrées</string>
    <string name="plat">Plats</string>
    <string name="dessert">Desserts</string>
    <string name="logMessageHome">Home activity destroyed</string>
    <string name="logMessageFood">Food activity destroyed</string>
    <string name="background_description2">valeurDuResto</string>
    <string name="descLogo">LogoDuPlat</string>
    <string name="nextLogo">next</string>
    <string name="Placeholder">Placeholder</string>
    <string name="detailsBackground">LIVENUDES</string>
    <string name="addToCart">Ajouter au panier </string>
    <string name="errorNoPlats">Pas de plats dispo au resto</string>
    <string name="errorRetrieve">Impossible de récupérer la liste des {category}. Veuillez réessayez...\"</string>
    <string name="addButton">addButton</string>
    <string name="removeButton">removeButton</string>
    <string name="nbToAdd">1</string>
    <string name="foodDetails">Activity FoodDetails destroy</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connect">Se connecter</string>
    <string name="loginBackground">loginBackground</string>
    <string name="createAccount">Créer un compte</string>
    <string name="name">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="mail">Adresse mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="okCompte">Valider le compte</string>
    <string name="back">Retour</string>
    <string name="connection">Se connecter</string>
    <string name="login">Login</string>
    <string name="commander">Commander</string>
    <string name="adresse">Adresse</string>
    <string name="successCreation">Création de votre compte</string>
    <string name="errorCreation">Erreur lors de la création du compte</string>
    <string name="logMessageLogin">Login Activity Destroyed</string>
    <string name="logMessageAccount">Create Account Activity Destroyed</string>
    <string name="connected">Vous êtes connecté</string>
    <string name="createAnAccount">Veuillez créer un compte</string>
    <string name="commandValid">Commande Validé</string>
    <string name="ErrorCommande">Erreur lors de la commande</string>
    <string name="cartEmptu">Votre panier est vide</string>
</resources>