<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.isen.Leclere.androiderestaurant.FoodDetails">


    <ImageView
        android:id="@+id/detailsBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/detailsBackground"
        android:rotation="-90"
        android:scaleX="1.8"
        android:scaleY="1.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/food_details" />

    <TextView
        android:id="@+id/titleDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Placeholder"
        android:textColor="#D30FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detailsBackground"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoDetails" />

    <TextView
        android:id="@+id/Desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/Placeholder"
        android:textColor="#EA079E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/titleDetails"
        app:layout_constraintStart_toStartOf="@+id/titleDetails"
        app:layout_constraintTop_toBottomOf="@+id/titleDetails" />

    <Button
        android:id="@+id/addCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/addToCart"
        app:layout_constraintEnd_toEndOf="@+id/Desc"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/Desc"
        app:layout_constraintTop_toBottomOf="@+id/Desc" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/logoDetails"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addbutton"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/addButton"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintStart_toStartOf="@+id/detailsBackground"
        app:layout_constraintTop_toBottomOf="@+id/Desc" />

    <ImageView
        android:id="@+id/removebutton"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="116dp"
        android:contentDescription="@string/removeButton"
        android:src="@drawable/ic_baseline_remove_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/detailsBackground"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addbutton"
        app:layout_constraintTop_toBottomOf="@+id/Desc" />

    <TextView
        android:id="@+id/nbToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/nbToAdd"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/removebutton"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/addbutton"
        app:layout_constraintTop_toBottomOf="@+id/Desc" />

</androidx.constraintlayout.widget.ConstraintLayout>