<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loginBackground"
        android:rotation="90"
        android:scaleX="2.1"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/titleCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/omegagradient"
        android:text="@string/createAccount"
        android:textAlignment="textStart"
        android:textColor="#E600FF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/name"
        android:textColor="#E600FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:alpha="0.9"
        android:textColorHint="#E600FF"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textNom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="sans-serif"
            android:hint="@string/name"
            android:textColor="#E600FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/prenom"
        android:textAlignment="center"
        android:textColor="#E600FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrenom"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:textColorHint="#E600FF"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textPrenom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPrenom"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="sans-serif"
            android:hint="@string/prenom"
            android:textColor="#E600FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/mdp"
        android:textAlignment="center"
        android:textColor="#E600FF"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPrenom" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:textColorHint="#E600FF"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textMdp">

        <EditText
            android:id="@+id/inputPAssword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:textColor="#E600FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/mail"
        android:textColor="#E600FF"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMail"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:textColorHint="#E600FF"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textMail">

        <EditText
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="#E600FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/adresse"
        android:textColor="#E600FF"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutMail"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutMail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAdress"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:textColorHint="#E600FF"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutMail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutMail"
        app:layout_constraintTop_toBottomOf="@+id/textAdresse">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAdress"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="sans-serif"
            android:hint="@string/adresse"
            android:textColor="#E600FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/validAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/okCompte"
        app:iconTint="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutAdress"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutAdress"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/omegapro"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>