<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C19911F1">

        <ImageView
            android:id="@+id/logo_cart"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/descLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            tools:srcCompat="@tools:sample/avatars" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <TextView
            android:id="@+id/list_title_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/Placeholder"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/list_price_cart"
            app:layout_constraintEnd_toStartOf="@+id/suppr"
            app:layout_constraintStart_toEndOf="@+id/logo_cart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/Placeholder"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/list_title_cart"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="@+id/list_title_cart"
            app:layout_constraintTop_toBottomOf="@+id/list_title_cart" />

        <TextView
            android:id="@+id/list_quantity_cart"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:text="@string/Placeholder"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/list_price_cart"
            app:layout_constraintTop_toBottomOf="@+id/suppr" />

        <ImageView
            android:id="@+id/suppr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/nextLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>